// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`кнопка на вкладке "поднятия в поиске" если есть скидка и включено автоподнятие, напишет об автоподнятие 1`] = `
<div
  className="CardVAS__buttonContent"
>
  <Price
    className="CardVAS__buttonText"
    currency="RUR"
    free="Поднять бесплатно"
    prefix="Поднять за "
    price={197}
    separator=" "
  />
  <span
    className="CardVAS__buttonSubText"
  >
    Включено автоподнятие
  </span>
</div>
`;

exports[`кнопка на вкладке "поднятия в поиске" если есть скидка и поднятие не было подключено ранее, нарисует скидку 1`] = `
<div
  className="CardVAS__buttonContent"
>
  <Price
    className="CardVAS__buttonText"
    currency="RUR"
    free="Поднять бесплатно"
    prefix="Поднять за "
    price={197}
    separator=" "
  />
  <Price
    className="CardVAS__buttonSubText"
    currency="RUR"
    prefix="Вместо "
    price={328}
    separator=" "
  />
</div>
`;

exports[`кнопка на вкладке "поднятия в поиске" если есть скидка, автоподнятие выключено, но услуга была подключена ранее, напишет как давно была подключена услуга 1`] = `
<div
  className="CardVAS__buttonContent"
>
  <Price
    className="CardVAS__buttonText"
    currency="RUR"
    free="Поднять бесплатно"
    prefix="Поднять за "
    price={197}
    separator=" "
  />
  <TimeAgo
    className="CardVAS__buttonSubText"
    maxTimeAgo={86400000}
    timestamp="1559563125517"
  />
</div>
`;

exports[`кнопка на вкладке "поднятия в поиске" если ничего такого нет, просто напишет цену услуги 1`] = `
<div
  className="CardVAS__buttonContent"
>
  <Price
    className=""
    currency="RUR"
    free="Поднять бесплатно"
    prefix="Поднять за "
    price={197}
    separator=" "
  />
</div>
`;

exports[`при клике на кнопку передаст правильные параметры в модал оплаты 1`] = `
Object {
  "category": "cars",
  "from": "card-vas",
  "offerId": "1085562758-1970f439",
  "services": Array [
    Object {
      "currency": "RUR",
      "days": 60,
      "description": "Это супер-комбо&nbsp;&mdash; все мощности Авто.ру будут использованы для продажи вашего автомобиля. Объявление будет размещено в&nbsp;специальном блоке вверху страниц, выделено цветом и&nbsp;самое главное&nbsp;&mdash; каждый день будет автоматически подниматься на&nbsp;первое место до&nbsp;конца размещения.",
      "multiplier": 200,
      "name": "VIP",
      "need_confirm": false,
      "original_price": 4958,
      "package_services": Array [
        Object {
          "days": 60,
          "name": "Выделение цветом",
          "need_confirm": false,
          "price": 0,
          "recommendation_priority": 0,
          "service": "all_sale_color",
        },
        Object {
          "days": 60,
          "name": "Спецпредложение",
          "need_confirm": false,
          "price": 0,
          "recommendation_priority": 0,
          "service": "all_sale_special",
        },
        Object {
          "days": 60,
          "name": "Поднятие в ТОП",
          "need_confirm": false,
          "price": 0,
          "recommendation_priority": 0,
          "service": "all_sale_toplist",
        },
        Object {
          "days": 60,
          "name": "Поднятие в поиске",
          "need_confirm": false,
          "price": 0,
          "recommendation_priority": 0,
          "service": "all_sale_fresh",
        },
      ],
      "price": 2975,
      "recommendation_priority": 14,
      "service": "package_vip",
      "title": "Все опции продвижения на весь срок объявления",
    },
  ],
  "shouldShowSuccessTextAfter": true,
  "shouldUpdateOfferAfter": true,
}
`;

exports[`при клике на кнопку правильно залогирует событие клика 1`] = `
Object {
  "event": "VAS_CLICK",
  "from": "card-vas",
  "originalPrice": 4958,
  "price": 2975,
  "serviceId": "package_vip",
}
`;

exports[`при рендере отправит метрику показов васов для первой вкладки 1`] = `
Object {
  "event": "VAS_SHOW",
  "from": "card-vas",
  "originalPrice": 1247,
  "price": 375,
  "serviceId": "package_turbo",
}
`;

exports[`при смене вкладки правильно отправит метрику показов 1`] = `
Object {
  "event": "VAS_SHOW",
  "from": "card-vas",
  "originalPrice": 1247,
  "price": 375,
  "serviceId": "package_turbo",
}
`;

exports[`скидка на пакет услуг если есть скидка, отобразит её на кнопке 1`] = `
<Price
  className="CardVAS__buttonSubText"
  currency="RUR"
  prefix="Вместо "
  price={4958}
  separator=" "
/>
`;
